--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial,  sans-serif; /* Familia de fuentes */
-    font-size: 11px; /* El tamaño de la fuente principal en el tag <p></p> */
-    background-color: #f0f0f0; /* El color del fondo de la página web */
-    color: #333333; /* El color del texto*/ 
+    font-size: 13px; /* El tamaño de la fuente principal en el tag <p></p> */
+    background-color: #ffffff; /* El color del fondo de la página web */
+    color: #000000; /* El color del texto*/ 
 }
 h1 {
     color: #0027a8; /* El color de la cabecera */
